<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resume"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_resume_title" />
        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_following_title" />
        <item
            android:id="@+id/nav_follower"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_follower_title" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_favorite_title" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
